# fs3000-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
fs3000/: Cargo.toml
fs3000/src/: address.rs  lib.rs  protocol.rs
fs3000/tests/: ft232h.rs
src/: address.rs  client_type.rs  lib.rs  protocol.rs  types.rs
tests/: ft232h.rs
