[package]
name = "fs3000-rs"
description = "A platform-agnostic, embedded-hal driver for FS3000 airflow sensors."
version = "0.1.4"
edition = "2021"
repository = "https://github.com/JanBerktold/fs3000-rs"
license = "MIT"
keywords = ["embedded", "async", "embedded-hal"]

[features]
defmt = ["dep:defmt"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
thiserror = { version = "2", default-features = false }
defmt = { version = "1", optional = true }

[dev-dependencies]
ftdi-embedded-hal = { version = "0.23.2", features = ["libftd2xx"] }
embedded-hal-bus = { version = "0.3", features = ["async"]}
anyhow = "1"
tokio-test = "0.4.4"

# Local fork to add aarch64 support
# [patch.crates-io]
# libftd2xx-ffi = { path = "../libftd2xx-ffi" }
